--- a/Autosume/Autosume/client/package.json
+++ b/Autosume/Autosume/client/package.json
@@ -18,6 +18,7 @@
     "@mui/x-date-pickers": "^7.1.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
+    "dotenv": "^17.0.0",
     "formik": "^2.4.5",
     "lucide-react": "^0.525.0",
     "react": "^18.2.0",
@@ -34,6 +35,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "nodemon": "^3.1.10",
     "vite": "^5.0.8"
   }
 }
