--- a/Autosume/Autosume/client/package.json
+++ b/Autosume/Autosume/client/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.14",
+    "@mui/icons-material": "^5.17.1",
     "@mui/material": "^5.15.14",
     "@mui/x-date-pickers": "^7.1.0",
     "axios": "^1.6.8",
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
+    "smart": "^0.5.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
