--- a/Autosume/Autosume/client/package.json
+++ b/Autosume/Autosume/client/package.json
@@ -11,12 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@date-io/date-fns": "^3.2.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^5.17.1",
     "@mui/material": "^5.17.1",
-    "@mui/x-date-pickers": "^7.1.0",
+    "@mui/x-date-pickers": "^7.29.4",
     "axios": "^1.6.8",
+    "date-fns": "^2.29.3",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "lucide-react": "^0.525.0",
