--- a/Autosume/Autosume/server/package.json
+++ b/Autosume/Autosume/server/package.json
@@ -16,12 +16,14 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase-admin": "^13.4.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.1",
     "mysql2": "^3.9.3",
     "sequelize": "^6.37.2",
     "yup": "^1.4.0"
