--- a/Autosume/Autosume/client/package.json
+++ b/Autosume/Autosume/client/package.json
@@ -13,21 +13,29 @@
   },
   "dependencies": {
     "@date-io/date-fns": "^3.2.1",
+    "@emotion/is-prop-valid": "^1.3.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@emotion/use-insertion-effect-with-fallbacks": "^1.2.0",
     "@mui/icons-material": "^5.17.1",
     "@mui/material": "^5.17.1",
     "@mui/x-date-pickers": "^8.6.0",
     "axios": "^1.6.8",
     "date-fns": "^3.2.0",
     "dayjs": "^1.11.10",
+    "deepmerge": "^4.3.1",
     "formik": "^2.4.5",
+    "hoist-non-react-statics": "^3.3.2",
+    "lodash-es": "^4.17.21",
     "lucide-react": "^0.525.0",
+    "openai": "^5.10.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-compare": "^3.2.2",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "smart": "^0.5.0",
+    "tiny-warning": "^1.0.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -41,4 +49,3 @@
     "vite": "^7.0.0"
   }
 }
-
