--- a/Autosume/Autosume/client/package.json
+++ b/Autosume/Autosume/client/package.json
@@ -21,13 +21,15 @@
     "@mui/material": "^5.17.1",
     "@mui/x-date-pickers": "^8.6.0",
     "axios": "^1.6.8",
-    "date-fns": "^3.2.0",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "deepmerge": "^4.3.1",
     "formik": "^2.4.5",
     "hoist-non-react-statics": "^3.3.2",
+    "install": "^0.13.0",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.525.0",
+    "npm": "^11.5.1",
     "openai": "^5.10.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
