partially working AI

--- a/Autosume/Autosume/server/package.json
+++ b/Autosume/Autosume/server/package.json
@@ -15,7 +15,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
-    "axios": "^1.10.0",
+    "axios": "^1.11.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -26,9 +26,12 @@
     "firebase-admin": "^13.4.0",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.9.1",
     "mongoose": "^8.16.1",
+    "multer": "^2.0.2",
     "mysql2": "^3.9.3",
     "openai": "^5.10.2",
+    "pdf-parse": "^1.1.1",
     "sequelize": "^6.37.2",
     "yup": "^1.4.0"
   },
