--- a/Autosume/Autosume/server/package.json
+++ b/Autosume/Autosume/server/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "mysql2": "^3.9.3",
+    "nodemailer": "^7.0.5",
     "openai": "^5.10.2",
     "sequelize": "^6.37.2",
     "yup": "^1.4.0"
