Add this into your .env file

--- a/Autosume/Autosume/server/.env.example
+++ b/Autosume/Autosume/server/.env.example
@@ -1,9 +1,19 @@
-APP_PORT = 3001
-CLIENT_URL = "http://localhost:3000"
-DB_HOST = "localhost"
-DB_PORT = 3306
-DB_USER = "learning"
-DB_PWD = "mysql"
-DB_NAME = "learning"
-APP_SECRET = "013720de-bd04-40b2-9a8c-ca625c831265"
-TOKEN_EXPIRES_IN = "30d"
+APP_PORT=3001
+CLIENT_URL=http://localhost:3000
+
+MONGO_URI="mongodb+srv://Hariz:luffy972@cluster0.zug7zxv.mongodb.net/autosume_db?retryWrites=true&w=majority&appName=Cluster0"
+
+APP_SECRET=013720de-bd04-40b2-9a8c-ca625c831265
+TOKEN_EXPIRES_IN=30d
+
+JWT_SECRET=your-jwt-secret
+JWT_REFRESH_SECRET=your-refresh-secret
+TOKEN_EXPIRES_IN=15m
+NODE_ENV=development
+PORT=5000
+CLIENT_URL=http://localhost:3000
+SENDGRID_API_KEY="my-sendgrid-api-key"
+
+OPENAI_API_KEY="your-openai-api-key"
+
+# npm install @sendgrid/mail
