--- a/Autosume/Autosume/server/package.json
+++ b/Autosume/Autosume/server/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@sendgrid/mail": "^8.1.5",
     "axios": "^1.10.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
@@ -32,6 +33,7 @@
     "mysql2": "^3.9.3",
     "nodemailer": "^7.0.5",
     "openai": "^5.10.2",
+    "pdf-parse": "^1.1.1",
     "sequelize": "^6.37.2",
     "yup": "^1.4.0"
   },
