--- a/Autosume/Autosume/client/package.json
+++ b/Autosume/Autosume/client/package.json
@@ -39,6 +39,7 @@
     "react-toastify": "^10.0.5",
     "smart": "^0.5.0",
     "tiny-warning": "^1.0.3",
+    "uuid": "^11.1.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
