--- a/Autosume/Autosume/client/package.json
+++ b/Autosume/Autosume/client/package.json
@@ -37,6 +37,7 @@
     "react-router-dom": "^6.22.3",
     "react-select": "^5.10.2",
     "react-toastify": "^10.0.5",
+    "recharts": "^3.1.2",
     "smart": "^0.5.0",
     "tiny-warning": "^1.0.3",
     "uuid": "^11.1.0",
